--- a/pages/11504.html
+++ b/pages/11504.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -378,7 +377,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/super+Lie+algebra'>super Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></li>
 </ul>
 </li>
 
@@ -473,7 +472,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincare Lie algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincare Lie algebra</a></p>
 </li>
 
 <li>
@@ -576,7 +575,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma-model</a>,</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>CFT</a>, <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbation theory</a></li>
+<li><span class='newWikiWord'>CFT<a href='/nlab/new/CFT'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbation theory</a></li>
 </ul>
 </li>
 
@@ -753,7 +752,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -826,7 +825,7 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergometric</a> interpretation of picture changing operators as part of the geometry of <a class='existingWikiWord' href='/nlab/show/super+Riemann+surface'>super Riemann surfaces</a> is given in</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometric</a> interpretation of picture changing operators as part of the geometry of <a class='existingWikiWord' href='/nlab/show/super+Riemann+surface'>super Riemann surfaces</a> is given in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Alexander+Belopolsky'>Alexander Belopolsky</a>, <em>New Geometrical Approach to Superstrings</em> (<a href='http://arxiv.org/abs/hep-th/9703183'>arXiv:hep-th/9703183</a>)</li>
@@ -843,19 +842,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on April 11, 2014 01:44:50 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.37.147.12)
+  <p>
+  Last revised on July 26, 2018 at 03:53:03.
+  See the <a href="https://ncatlab.org/nlab/history/picture changing operator" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/picture+changing+operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/picture+changing+operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/picture+changing+operator/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/picture+changing+operator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/picture+changing+operator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/picture changing operator/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/picture+changing+operator" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/picture+changing+operator" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/picture+changing+operator" id="view_source" rel="nofollow">Source</a>
