--- a/pages/112.html
+++ b/pages/112.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1219/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -454,7 +453,7 @@ margin-left: 0em;
 
 <p>A <a class='existingWikiWord' href='/nlab/show/category'>category</a> consists of a collection of <strong>objects</strong> together with <a class='existingWikiWord' href='/nlab/show/morphism'>morphisms</a> between these objects. Thus, naively, we may think of objects as the ‘<a class='existingWikiWord' href='/nlab/show/element'>elements</a>’ of a category.</p>
 
-<p>More generally, in <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a> the objects of an <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/%28n%2Cr%29-category'>category</a> are the <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>-dimensional cells of that structure, the <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/0-morphism'>morphisms</a>.</p>
+<p>More generally, in <a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a> the objects of an <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/%28n%2Cr%29-category'>category</a> are the <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>-dimensional cells of that structure, the <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/0-morphism'>morphisms</a>.</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -464,7 +463,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>In the <a class='existingWikiWord' href='/nlab/show/fundamental+groupoid'>fundamental groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Π</mi> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Pi_1(X)</annotation></semantics></math> of a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, the objects are the points of <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
+<p>In the <a class='existingWikiWord' href='/nlab/show/fundamental+groupoid'>fundamental groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Π</mi> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Pi_1(X)</annotation></semantics></math> of a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, the objects are the points of <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
 </li>
 
 <li>
@@ -472,15 +471,15 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>If a <a class='existingWikiWord' href='/nlab/show/simplicial+set'>simplicial set</a> that is a <a class='existingWikiWord' href='/nlab/show/Kan+complex'>Kan complex</a> is regarded as an <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>groupoid</a>, then its vertices are the objects of that <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoid.</p>
+<p>If a <a class='existingWikiWord' href='/nlab/show/simplicial+set'>simplicial set</a> that is a <a class='existingWikiWord' href='/nlab/show/Kan+complex'>Kan complex</a> is regarded as an <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>groupoid</a>, then its vertices are the objects of that <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoid.</p>
 </li>
 
 <li>
-<p>Similarly if a simplicial set that is a <a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a> is regarded as an <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>category</a>, then its vertices are the objects of that <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category.</p>
+<p>Similarly if a simplicial set that is a <a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a> is regarded as an <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>category</a>, then its vertices are the objects of that <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-category.</p>
 </li>
 
 <li>
-<p>If a <a class='existingWikiWord' href='/nlab/show/globular+set'>globular set</a> is equipped with the structure of a <a class='existingWikiWord' href='/nlab/show/strict+omega-category'>strict ω-category</a>, then its <math class='maruku-mathml' display='inline' id='mathml_8bbfd51954a259fa52ec62dbdbd7b3b848c20438_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>-cells are the objects of that <a class='existingWikiWord' href='/nlab/show/omega-category'>ω-category</a>.</p>
+<p>If a <a class='existingWikiWord' href='/nlab/show/globular+set'>globular set</a> is equipped with the structure of a <a class='existingWikiWord' href='/nlab/show/strict+n-category'>strict ∞-category</a>, then its <math class='maruku-mathml' display='inline' id='mathml_51ade3bbad8f63591bce4f58c9f3cd1307085270_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>-cells are the objects of that <a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a>.</p>
 </li>
 </ul>
 
@@ -492,19 +491,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 17, 2011 21:48:38 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (64.89.53.28)
+  <p>
+  Last revised on July 26, 2018 at 04:31:33.
+  See the <a href="https://ncatlab.org/nlab/history/object" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/object" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/object/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/object" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/object" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/object" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/object/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/object" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/object" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/object/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/object" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/object" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/object" id="view_source" rel="nofollow">Source</a>
