--- a/pages/110.html
+++ b/pages/110.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -307,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -457,13 +457,13 @@ margin-left: 0em;
 
 <h2 id='definition'>Definition</h2>
 
-<p>Given two objects in a (locally small) category, say <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math>, there is a set <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>hom</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>hom(x,y)</annotation></semantics></math>, called a <a class='existingWikiWord' href='/nlab/show/hom-set'>hom-set</a>, whose elements are morphisms from <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math>. Given a morphism <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> in this hom-set, we write <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>x</mi><mo>→</mo><mi>y</mi></mrow><annotation encoding='application/x-tex'>f:x \to y</annotation></semantics></math> to indicate that it goes from <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math>.</p>
+<p>Given two objects in a (locally small) category, say <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math>, there is a set <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>hom</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>hom(x,y)</annotation></semantics></math>, called a <a class='existingWikiWord' href='/nlab/show/hom-set'>hom-set</a>, whose elements are morphisms from <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math>. Given a morphism <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> in this hom-set, we write <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>x</mi><mo>→</mo><mi>y</mi></mrow><annotation encoding='application/x-tex'>f:x \to y</annotation></semantics></math> to indicate that it goes from <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math>.</p>
 
 <p>More generally, a morphism is what goes between objects in any <a class='existingWikiWord' href='/nlab/show/n-category'>n-category</a>.</p>
 
 <h2 id='examples'>Examples</h2>
 
-<p>The most familiar example is the category <a class='existingWikiWord' href='/nlab/show/Set'>Set</a>, where the objects are sets and the morphisms are functions. Here if <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math> are sets, a morphism <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>x</mi><mo>→</mo><mi>y</mi></mrow><annotation encoding='application/x-tex'>f: x \to y</annotation></semantics></math> is a function from <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_9e60a287dee9bed93379cd4243dca2b4f0de0ef5_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math>.</p>
+<p>The most familiar example is the category <a class='existingWikiWord' href='/nlab/show/Set'>Set</a>, where the objects are sets and the morphisms are functions. Here if <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math> are sets, a morphism <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>x</mi><mo>→</mo><mi>y</mi></mrow><annotation encoding='application/x-tex'>f: x \to y</annotation></semantics></math> is a function from <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_d01faeeff08e72cb7bbef22125e69175647a8a5b_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -521,14 +521,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 12, 2018 at 05:13:45.
+  Last revised on July 26, 2018 at 04:30:57.
   See the <a href="https://ncatlab.org/nlab/history/morphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/morphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/morphism/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/morphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/morphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/morphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/morphism/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/morphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/morphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/morphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
